Fix hscrollbar appearing
It's not like I know what I'm doing ...

--- a/Base48/common.css
+++ b/Base48/common.css
@@ -13,7 +13,6 @@
 }
 
 .b48mw-featured-project-container {
-  width: 100%;
   padding-left: 10px;
 }
 
